# BioSkills

./: README.md  download_progress.txt  download_summary.json  extraction_log.md  large_files_report.md  library_list.txt
.github/docs/: github_library.txt  github_repo_list.txt  lib_FigureYa.txt  lib_FigureYa_Plus2.txt  lib_FigureYa_plus.txt  lib_cran_bioc.txt  lib_python.txt  library_list.txt  other_library.txt
.github/scripts/: check_backup.R  collect_library.sh  create_metadata.py  download_from_github.R  download_library.R  download_packages.R  download_packages.py  extract_versions_from_figureya.R  install_from_CRAN_Bioc.R  install_from_github.R  install_from_github_CRAN_Bioc.R  local_mirror.R  manage_packages.py  parse_packages.py  usage.R
.github/workflows/: Backup_CRAN_and_Bioconductor_R_Packages.yml  Backup_GitHub_R_Packages.yml  EmergencyCleanup.yml  download-python-packages.yml  download_python_packages.yml  download_r_packages.yml  sync-from-figureya.yml  unzip.yml  unzip_whl.yml
BiocManager/: DESCRIPTION  MD5
BiocManager/R/: inet.R
CRAN_Bioc_backup/: backup_log_2025-10-14.csv  backup_log_2025-10-17.csv
CRAN_Bioc_backup/ANCOMBC/: package_info.txt
CRAN_Bioc_backup/AUCell/: package_info.txt
CRAN_Bioc_backup/AlgDesign/: package_info.txt
CRAN_Bioc_backup/AnnotationDbi/: package_info.txt
CRAN_Bioc_backup/AnnotationHub/: package_info.txt
CRAN_Bioc_backup/BART/: package_info.txt
CRAN_Bioc_backup/BSgenome/: package_info.txt
CRAN_Bioc_backup/BayesSpace/: package_info.txt
CRAN_Bioc_backup/BioNet/: package_info.txt
CRAN_Bioc_backup/Biobase/: package_info.txt
CRAN_Bioc_backup/BiocGenerics/: package_info.txt
CRAN_Bioc_backup/BiocManager/: package_info.txt
CRAN_Bioc_backup/BiocParallel/: package_info.txt
CRAN_Bioc_backup/Biostrings/: package_info.txt
CRAN_Bioc_backup/BlandAltmanLeh/: package_info.txt
CRAN_Bioc_backup/BoolNet/: package_info.txt
CRAN_Bioc_backup/Boruta/: package_info.txt
CRAN_Bioc_backup/CAMERA/: package_info.txt
CRAN_Bioc_backup/CATALYST/: package_info.txt
CRAN_Bioc_backup/Cairo/: package_info.txt
CRAN_Bioc_backup/CellNOptR/: package_info.txt
CRAN_Bioc_backup/ChAMP/: package_info.txt
CRAN_Bioc_backup/ChIPseeker/: package_info.txt
CRAN_Bioc_backup/ComparisonSurv/: package_info.txt
CRAN_Bioc_backup/ComplexHeatmap/: package_info.txt
CRAN_Bioc_backup/ConsensusClusterPlus/: package_info.txt
CRAN_Bioc_backup/CytoML/: package_info.txt
CRAN_Bioc_backup/DEP/: package_info.txt
CRAN_Bioc_backup/DESeq2/: package_info.txt
CRAN_Bioc_backup/DNAcopy/: package_info.txt
CRAN_Bioc_backup/DNAshapeR/: package_info.txt
CRAN_Bioc_backup/DOSE/: package_info.txt
CRAN_Bioc_backup/DT/: package_info.txt
CRAN_Bioc_backup/DiffBind/: package_info.txt
CRAN_Bioc_backup/DoE.base/: package_info.txt
CRAN_Bioc_backup/EBImage/: package_info.txt
CRAN_Bioc_backup/EnvStats/: package_info.txt
CRAN_Bioc_backup/Epi/: package_info.txt
CRAN_Bioc_backup/EpiDISH/: package_info.txt
CRAN_Bioc_backup/EpiEstim/: package_info.txt
CRAN_Bioc_backup/EpiModel/: package_info.txt
CRAN_Bioc_backup/FlowSOM/: package_info.txt
CRAN_Bioc_backup/GEOquery/: package_info.txt
CRAN_Bioc_backup/GO.db/: package_info.txt
CRAN_Bioc_backup/GOSemSim/: package_info.txt
CRAN_Bioc_backup/GOplot/: package_info.txt
CRAN_Bioc_backup/GSA/: package_info.txt
CRAN_Bioc_backup/GSEABase/: package_info.txt
CRAN_Bioc_backup/GSVA/: package_info.txt
CRAN_Bioc_backup/GenomicFeatures/: package_info.txt
CRAN_Bioc_backup/GenomicRanges/: package_info.txt
CRAN_Bioc_backup/GetoptLong/: package_info.txt
CRAN_Bioc_backup/Gviz/: package_info.txt
CRAN_Bioc_backup/Hmisc/: package_info.txt
CRAN_Bioc_backup/IRanges/: package_info.txt
CRAN_Bioc_backup/ISOpureR/: package_info.txt
CRAN_Bioc_backup/IlluminaHumanMethylation450kanno.ilmn12.hg19/: package_info.txt
CRAN_Bioc_backup/JASPAR2018/: package_info.txt
CRAN_Bioc_backup/KEGGREST/: package_info.txt
CRAN_Bioc_backup/KEGGgraph/: package_info.txt
CRAN_Bioc_backup/MCMCglmm/: package_info.txt
CRAN_Bioc_backup/MSnID/: package_info.txt
CRAN_Bioc_backup/MSnbase/: package_info.txt
CRAN_Bioc_backup/MSstats/: package_info.txt
CRAN_Bioc_backup/MSstatsTMT/: package_info.txt
CRAN_Bioc_backup/MatchIt/: package_info.txt
CRAN_Bioc_backup/MetaboSignal/: package_info.txt
CRAN_Bioc_backup/MethComp/: package_info.txt
CRAN_Bioc_backup/MethylMix/: package_info.txt
CRAN_Bioc_backup/MultiAssayExperiment/: package_info.txt
CRAN_Bioc_backup/MutationalPatterns/: package_info.txt
CRAN_Bioc_backup/NMF/: package_info.txt
CRAN_Bioc_backup/NetPathMiner/: package_info.txt
CRAN_Bioc_backup/OmicCircos/: package_info.txt
CRAN_Bioc_backup/PMAPscore/: package_info.txt
R_packages_backup/: backup_log_2025-10-14.csv
R_packages_backup/NKI-CCB_DISCOVER/DISCOVER-master/python/: .bumpversion.cfg  meson.build  meson.options  pyproject.toml
R_packages_backup/NKI-CCB_DISCOVER/DISCOVER-master/python/conda-recipe/: conda_build_config.yaml  meta.yaml
R_packages_backup/NKI-CCB_DISCOVER/DISCOVER-master/python/discover/: __init__.py  data.py
R_packages_backup/NKI-CCB_DISCOVER/DISCOVER-master/python/discover/datasets/: brca_mut.npy.bz2
docs/: test.md
(+5285 files in other folders)
